# opensearch-embed

./: README.md  examples.json  pyproject.toml  speed_test.py
