[project]
name = "opensearch-embed"
version = "0.1.0"
description = "OpenSearch embedding speed testing"
requires-python = ">=3.8"
dependencies = [
    "sentence-transformers>=2.0.0",
    "torch>=1.9.0,<3.0.0",
    "numpy>=1.21.0",
    "psutil>=5.8.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
